--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body {
   width: 80%;
   margin: 0 auto;
 
-  height: 300px;
+  /* Do not use height ever? */
+  /* height: 300px; */
+
+  padding: 5em; /* 16 * 5 = 80px */
 }
 
