--- a/challenges/style.css
+++ b/challenges/style.css
@@ -1,73 +1,49 @@
-* {
+*, *::before, *::after {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
+  font-size: 1.3125;
 }
 
-.intro {
-  background: #23424a;
-  color: white;
-  padding: 9.25em 7.625em;
+h1 {
+  font-size: 3rem;
 }
 
 .container {
-  width: 55%;
-  max-width: 710px;
-  /* margin: 0 auto; */
+  width: 80%;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
-.intro-content h1 {
-  font-size: 2.95rem;
+.hero {
+  padding: 100px 0;
+  background-color: #23424a;
+  color: #fff;
+}
+
+.hero__text {
+  width: 60%;
+}
+
+.hero p {
+  margin-bottom: 3em;
+}
+
+.btn {
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #23424a;
   font-weight: 700;
+  background-color: #38cfd9;
+  padding: .75em 2rem;
+  border-radius: 100px;
 }
 
-.intro-content p {
-  font-size: 1.3125rem;
-  line-height: 1.97125rem;
-  color:#d9d9d9;
-  font-weight: 400;
-}
-
-.intro-content button {
-  font-size: 1.1325rem;
-  font-weight: 700;
-  background: #38CFD9;
-  color:#072a2d;
-  padding: 1rem 3rem;
-  border-radius: 32px;
-  border: none;
-  margin-top: 3.25rem;
-  /* margin-bottom: 1rem; */
-}
-
-@media screen and (max-width: 1080px) {
-  html {
-    font-size: 12px;
-  }
-
-  .container {
-    margin: 0 auto;
-  }
-
-  .intro-content {
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
-@media screen and (max-width: 901px) {
-  .intro {
-    background: #23424a;
-    color: white;
-    padding: 9.25em 0;
-  }
-
-  .container {
-    width: 80%;
-  }
+.btn:hover,
+.btn:focus {
+  opacity: .75;
 }
