--- a/challenges/style.css
+++ b/challenges/style.css
@@ -19,65 +19,98 @@
 
    */
 
-   *, *::before, *::after {
-    box-sizing: border-box;
+  *, *::before, *::after {
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.3rem;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.3rem;
 }
 
 h1 {
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 .container {
-    width: 80%;
-    max-width: 1100px;
-    margin: 0 auto;
+  width: 80%;
+  max-width: 1100px;
+  margin: 0 auto;
 }
 
 .row {
-    /* display: flex => flex container */
-    display: flex;
+  /* display: flex => flex container */
+  display: flex;
 
-    /* can't use yet */
-    /* gap: 100px; */
+  /* can't use yet */
+  /* gap: 100px; */
+}
+
+.col + .col {
+  margin-left: .75em;
 }
 
 .col {
-    /* these are now flex items */
-    width: 100%;
+  /* these are now flex items */
+  width: 100%;
+  margin: 2.5rem auto;
+  text-align: center;
+}
+
+.col h2 {
+  font-size: 2.25rem;
+  color: #87629A;
+}
+
+.col p {
+  color: #3A3A3A;
 }
 
 .hero {
-    padding: 100px 0;
-    background-color: #23424A;
-    color: #FFF;
+  padding: 100px 0;
+  background-color: #23424A;
+  color: #FFF;
 }
 
 .hero__text {
-    width: 60%;
+  width: 60%;
 }
 
 .hero p {
-    margin-bottom: 3em;
+  margin-bottom: 3em;
 }
 
 .btn {
-    display: inline-block;
-    text-decoration: none;
-    text-transform: uppercase; 
-    color: #23424A;
-    font-weight: 900;
-    background-color: #38CFD9;
-    padding: .75em 2em;
-    border-radius: 100px;
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase; 
+  color: #23424A;
+  font-weight: 900;
+  background-color: #38CFD9;
+  padding: .75em 2em;
+  border-radius: 100px;
 }
 
 .btn:hover,
 .btn:focus {
-    opacity: .75; 
+  opacity: .75; 
 }
+
+.section {
+  background-color: #136C72;
+  color: white;
+}
+
+.col-2 {
+  margin: 2.5em 0;
+  text-align: center;
+}
+
+.col-2 + .col-2 {
+  margin-left: 1em;
+}
+
+/* .col-2 p {
+  font-weight: 400;
+} */
