--- a/challenges/style.css
+++ b/challenges/style.css
@@ -48,7 +48,7 @@ h1 {
 }
 
 .col + .col {
-  margin-left: .75em;
+  margin-left: 30px;
 }
 
 .col {
@@ -60,11 +60,6 @@ h1 {
 
 .col h2 {
   font-size: 2.25rem;
-  color: #87629A;
-}
-
-.col p {
-  color: #3A3A3A;
 }
 
 .hero {
@@ -79,6 +74,22 @@ h1 {
 
 .hero p {
   margin-bottom: 3em;
+}
+
+.three-col {
+  text-align: center;
+  padding: 3em 0;
+}
+
+.three-col h2 {
+  color: #87629A;
+}
+
+.two-col {
+  text-align: center;
+  padding: 3em 0;
+  background: #136c72;
+  color: #fff;
 }
 
 .btn {
@@ -96,21 +107,3 @@ h1 {
 .btn:focus {
   opacity: .75; 
 }
-
-.section {
-  background-color: #136C72;
-  color: white;
-}
-
-.col-2 {
-  margin: 2.5em 0;
-  text-align: center;
-}
-
-.col-2 + .col-2 {
-  margin-left: 1em;
-}
-
-/* .col-2 p {
-  font-weight: 400;
-} */
