--- a/challenges/style.css
+++ b/challenges/style.css
@@ -31,6 +31,28 @@ h1 {
   margin-top: 0;
 }
 
+/* ********* Kevin's CSS Start *********** */
+.section-title {
+  color: #87629a;
+}
+/* ********* Kevin's CSS End *********** */
+
+.btn {
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase; 
+  color: #23424A;
+  font-weight: 900;
+  background-color: #38CFD9;
+  padding: .75em 2em;
+  border-radius: 100px;
+}
+
+.btn:hover,
+.btn:focus {
+  opacity: .75; 
+}
+
 .container {
   width: 80%;
   max-width: 1100px;
@@ -74,50 +96,19 @@ h1 {
   margin-bottom: 3em;
 }
 
-.btn {
-  display: inline-block;
-  text-decoration: none;
-  text-transform: uppercase; 
-  color: #23424A;
-  font-weight: 900;
-  background-color: #38CFD9;
-  padding: .75em 2em;
-  border-radius: 100px;
+/* ********* Kevin's CSS *********** */
+.main {
+  margin-top: 3em;
 }
 
-.btn:hover,
-.btn:focus {
-  opacity: .75; 
+.primary-content {
+  width: 62%;
 }
 
-/* ********* Custom CSS *********** */
-.two-col {
-  margin-top: 2em;
-}
-
-.two-col__title {
-  margin-top: 1.125em;
-  margin-bottom: .5em;
-  font-size: 2.125rem;
-}
-
-.two-col__text {
-  margin-bottom: 2.8em;
-}
-
-.two-col__first-col {
-  width: 60%;
-}
-
-.two-col__first-col h2 {
-  color: #136C72;
-}
-
-
-.two-col__sidebar {
-  background: #136c72;
-  color: #fff;
+.sidebar {
+  width: 32%;
+  padding: 1em;
   text-align: center;
-  width: 35%;
-  padding: 0 1.5em;
+  color: #fff;
+  background-color: #136c72;
 }
