--- a/challenges/style.css
+++ b/challenges/style.css
@@ -4,21 +4,19 @@
 - All text is in the text.md file
 
 // Requirements
-1. Refer to the design specs for the
-   overall layout 
-2. The image should line up with
-   the sidebar in the section
-   below
-
+   1. Get all the navigation items next to one another
+   2. Add a space between all the items
 */
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 1.3rem;
 }
 
@@ -31,26 +29,24 @@ h1 {
   margin-top: 0;
 }
 
-/* ********* Kevin's CSS Start *********** */
 .section-title {
   color: #87629a;
 }
-/* ********* Kevin's CSS End *********** */
 
 .btn {
   display: inline-block;
   text-decoration: none;
-  text-transform: uppercase; 
-  color: #23424A;
+  text-transform: uppercase;
+  color: #23424a;
   font-weight: 900;
-  background-color: #38CFD9;
-  padding: .75em 2em;
+  background-color: #38cfd9;
+  padding: 0.75em 2em;
   border-radius: 100px;
 }
 
 .btn:hover,
 .btn:focus {
-  opacity: .75; 
+  opacity: 0.75;
 }
 
 .container {
@@ -60,12 +56,8 @@ h1 {
 }
 
 .row {
-  /* display: flex => flex container */
   display: flex;
   justify-content: space-between;
-  
-  /* can't use yet */
-  /* gap: 100px; */
 }
 
 .col {
@@ -77,13 +69,41 @@ h1 {
   margin-left: 30px;
 }
 
-.hero {
-  padding: 100px 0;
-  background-color: #23424A;
-  color: #FFF;
+header {
+  background: #136c72;
+  padding: 0.5em 0;
 }
 
-.hero__text { 
+.nav__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.nav__link {
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.nav__link--button {
+  background: #fff;
+  color: #136c72;
+  padding: 0.25em 1em;
+  border-radius: 10em;
+}
+
+.nav__link:hover {
+  opacity: 0.75;
+}
+
+.hero {
+  padding: 100px 0;
+  background-color: #23424a;
+  color: #fff;
+}
+
+.hero__text {
   width: 62%;
 }
 
@@ -96,7 +116,6 @@ h1 {
   margin-bottom: 3em;
 }
 
-/* ********* Kevin's CSS *********** */
 .main {
   margin-top: 3em;
 }
