--- a/challenges/style.css
+++ b/challenges/style.css
@@ -71,13 +71,19 @@ h1 {
 
 header {
   background: #136c72;
-  padding: 0.5em 0;
+  padding: 1em 0;
 }
 
 .nav__list {
   margin: 0;
   padding: 0;
   list-style: none;
+
+  display: flex;
+}
+
+.nav__item {
+  margin-right: 1em;
 }
 
 .nav__link {
