--- a/challenges/style.css
+++ b/challenges/style.css
@@ -4,124 +4,76 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-}
-
-img {
-  max-width: 100%;
-}
-
 :root {
   --hero-title-color: #824936;
   --section-text-color: #F3EED9;
+  --section-bg-dark: #222C2A;
+  --title-font-family: 'Playfair Display', serif;
+  --subtitle-font-family: 'Roboto', sans-serif;
 }
 
-.hero {
-  background-color: #f3eed9;
+body {
+  margin: 0;
+  font-family: var(--subtitle-font-family);
+  font-size: 1.3125rem;
+  line-height: 1.6;
+  color: var(--section-bg-dark);
+}
+
+img { 
+  max-width: 100%;
+}
+
+h1, h2 {
+  font-family: var(--title-font-family);
+  font-weight: 900;
+  margin-top: 0;
+  line-height: 1.1;
+}
+
+section {
+  padding: 4em 0;
 }
 
 .container {
-  width: 80%;
-  max-width: 1128px;
+  width: 90%;
   margin: 0 auto;
 }
 
-.row {
-  display: flex;
-  justify-content: space-between;
+.section-title {
+  font-size: 2.25rem;
+  color: var(--section-text-color);
 }
 
-.hero__text {
-  width: 70%;
-  min-height: 660px;
+.section-title--dark {
+  color: var(--hero-title-color);
+}
+
+.intro {
+  background: var(--section-text-color);
+  padding: 200px 0;
   text-align: center;
-  justify-content: center;
-  flex-direction: column;
-  margin: 0 auto;
+  color: var(--hero-title-color);
 }
 
-.hero__subtitle {
-  font-size: 1.125rem;
-  font-family: 'Roboto', sans-serif;
-  color: #222C2A;
+.intro__text {
   text-transform: uppercase;
-  font-weight: 300;
-  letter-spacing: .5em;
+  letter-spacing: 10px;
+  font-size: 1.125rem;
+  color: var(--section-bg-dark);
+  margin: 0 0 .25em;
 }
 
-.hero__title {
-  font-size: 3.75rem;
-  font-family: 'Playfair Display', serif;
-  color: var(--hero-title-color);
-  line-height: 1em;
-  font-weight: 900;
-  margin: 0;
+.intro__title {
+  font-size: 3rem;
 }
 
-.article {
-  padding-top: 5em;
-  padding-bottom: 5em;
+.section-three {
+  background-color: var(--section-bg-dark);
+  color: #fff;
 }
 
-.article__title {
-  font-family: 'Playfair Display', serif;
-  font-weight: 900;
-  color: var(--hero-title-color);
-  font-size: 2.25rem;
-  margin: 0;
-}
-
-.article__text {
-  font-size: 1.31rem;
-  font-family: 'Roboto', sans-serif;
-  line-height: 1.5em;
-  width: 50%;
-}
-
-.article__text + .article__text {
-  margin-left: 2.5em;
-}
-
-.article-primary__title {
-  text-align: center;
-}
-
-.article-secondary {
-  background-color: #222c2A;
-}
-
-.article__content {
-  width: 50%;
-}
-
-.article__img {
-  width: 50%;
-}
-
-.article__content + .article__img {
-  margin-left: 2.5em;
-}
-
-.article__img + .article__content {
-  margin-left: 2.5em;
-}
-
-.article-secondary__title {
-  font-family: 'Playfair Display', serif;
-  font-weight: 900;
-  color: var(--section-text-color);
-  font-size: 2.25rem;
-  margin: 0;
-}
-
-.article-secondary__text {
-  font-size: 1.31rem;
-  font-family: 'Roboto', sans-serif;
-  line-height: 1.5em;
-  color: var(--section-text-color);
-}
-
-.article-last {
-  background-color: #824936;
+.section-four {
+  background-color: var(--hero-title-color); 
+  color: #fff;
 }
