--- a/challenges/style.css
+++ b/challenges/style.css
@@ -38,6 +38,7 @@ section {
 .container {
   width: 90%;
   margin: 0 auto;
+  max-width: 1128px;
 }
 
 .section-title {
@@ -76,4 +77,22 @@ section {
 .section-four {
   background-color: var(--hero-title-color); 
   color: #fff;
+}
+
+@media (min-width: 800px) {
+  .row {
+    display: flex;
+  }
+  
+  .col {
+    width: 100%;
+  }
+  
+  .col + .col {
+    margin-left: 5em;
+  }
+  
+  .intro__title {
+    font-size: 3.75rem; 
+  }
 }
