--- a/challenges/style.css
+++ b/challenges/style.css
@@ -55,6 +55,9 @@ section {
   padding: 200px 0;
   text-align: center;
   color: var(--hero-title-color);
+  min-height: 660px;
+  display: flex;
+  align-items: center;
 }
 
 .intro__text {
