--- a/challenges/style.css
+++ b/challenges/style.css
@@ -26,15 +26,12 @@ img {
 }
 
 h1 {
-  font-size: 3.751rem;
+  font-size: 3rem;
   margin-top: 0;
-  margin-bottom: .55em;
-  line-height: 1.25;
 }
 
 .section-title {
-  color: #136c72;
-  font-size: 3rem;
+  color: #87629a;
 }
 
 .btn {
@@ -43,13 +40,9 @@ h1 {
   text-transform: uppercase;
   color: #23424a;
   font-weight: 900;
-  font-size: 1.75rem;
   background-color: #38cfd9;
-  padding: .8em 2em;
-  margin-top: 0;
-  margin-bottom: 1em;
+  padding: 0.75em 2em;
   border-radius: 100px;
-  letter-spacing: .08em;
 }
 
 .btn:hover,
@@ -69,9 +62,6 @@ header {
   background: #136c72;
   padding: 1em 0;
   text-align: center;
-  position: absolute;
-  z-index: 100;
-  width: 100%;
 }
 
 .nav {
@@ -96,45 +86,6 @@ header {
 .nav-toggle:focus,
 .nav-toggle:hover {
   opacity: 0.75;
-}
-
-.nav__list {
-  list-style-type: none;
-  padding: 0;
-  margin-top: 1.8em;
-}
-
-.nav__item {
-  text-transform: uppercase;
-}
-
-.nav__list--primary .nav__item + .nav__item {
-  margin-top: 1.7em;
-}
-
-.nav__list--secondary .nav__item + .nav__item {
-  margin-top: 2.6em;
-}
-
-.nav__link {
-  text-decoration: none;
-  color: #fff;
-}
-
-.nav__list--primary {
-  margin-bottom: 3.5em;
-}
-
-.nav__list--secondary {
-  margin-bottom: 2.8em;
-}
-
-.nav__link--button {
-  padding: .5em 1em;
-  font-weight: 900;
-  border-radius: 100px;
-  color: #136c72;
-  background-color: #fff;
 }
 
 .hamburger {
@@ -171,43 +122,36 @@ header {
    Works the same :) */
 .nav {
   visibility: hidden;
+  height: 0;
   position: absolute;
 }
 
 .nav--visible {
   visibility: visible;
+  height: auto;
   position: relative;
-  background: #136c72;
 }
 
-.logo img {
-  height: 2.1em;
+.logo {
+  height: 30px;
 }
 
 .hero {
-  padding-top: 6.3em;
+  padding: 100px 0;
   background-color: #23424a;
   color: #fff;
 }
 
 .hero__img {
   margin-top: 2em;
-  margin-bottom: 3em;
 }
 
 .hero p {
-  margin-bottom: 1.2em;
-  line-height: 1.6;
-  font-size: 1.7rem;
+  margin-bottom: 3em;
 }
 
 .main {
   margin-top: 3em;
-}
-
-.section-p {
-  line-height: 1.6;
-  font-size: 1.7rem;
 }
 
 .sidebar {
@@ -215,46 +159,15 @@ header {
   text-align: center;
   color: #fff;
   background-color: #136c72;
-  line-height: 1.5em;
-  font-size: 2rem;
 }
 
-.sidebar-title {
-  font-size: 3rem;
-}
-
-@media (min-width: 900px) {
-  html {
-    font-size: .8rem;
-  }
-
+@media (min-width: 800px) {
   .nav-toggle {
     display: none;
   }
 
-  .logo {
-    width: 50%;
-    display: flex;
-  }
-
   .nav {
     visibility: visible;
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  .nav__list--primary, .nav__list--secondary {
-    margin: 0;
-  }
-  
-  .nav__list--primary .nav__item + .nav__item, .nav__list--secondary .nav__item + .nav__item  {
-    margin-top: 0;
-    margin-left: 1em;
-  }
-
-  .nav__list {
     display: flex;
   }
 
@@ -268,9 +181,9 @@ header {
   }
 
   .hero__img {
-    width: 50%;
+    width: 32%;
     align-self: flex-start;
-    margin: 0 0 1em 1em;
+    margin: 0;
   }
 
   .primary-content {
@@ -278,7 +191,6 @@ header {
   }
 
   .sidebar {
-    width: 50%;
-    margin: 0 0 0 1em;
+    width: 32%;
   }
 }
