--- a/challenges/style.css
+++ b/challenges/style.css
@@ -124,12 +124,45 @@ header {
   visibility: hidden;
   height: 0;
   position: absolute;
+  font-size: 1rem;
 }
 
 .nav--visible {
   visibility: visible;
   height: auto;
   position: relative;
+}
+
+.nav__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.nav__list--primary {
+  margin-bottom: 2em;
+}
+
+.nav__item {
+  margin-top: .75em;
+}
+
+.nav__link {
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.nav__link--button {
+  padding: .25em .75em;
+  background: #fff;
+  color: #23424a;
+  border-radius: 100px;
+}
+
+.nav__link:hover,
+.nav__link:focus {
+  opacity: .65;
 }
 
 .logo {
@@ -169,6 +202,23 @@ header {
   .nav {
     visibility: visible;
     display: flex;
+    align-items: center;
+    height: auto;
+    position: relative;
+    justify-content: flex-end;
+  }
+
+  .nav__list {
+    display: flex;
+    margin: 0;
+  }
+
+  .nav__list--primary {
+    margin: 0 auto;
+  }
+
+  .nav__item {
+    margin: 0 0 0 1.5em;
   }
 
   .row {
