--- a/challenges/style.css
+++ b/challenges/style.css
@@ -1,440 +1,23 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-:root {
-  --bg-nav-color: #2E323F;
-  --bg-main-color: #3B4050;
-  --bg-section-color: #6F737F;
-  --bg-secondary-color: #eeeeee;
-  --accent-color: #A59678;
-  --secondary-accent-color: #fff;
-  --main-font-family: 'Oswald', sans-serif;
-  --secondary-font-family: 'Montserrat', sans-serif;
-}
+* { box-sizing: border-box;}
 
 body {
   margin: 0;
-  font-family: var(--main-font-family);
-  font-size: 1.3rem;
 }
 
-img {
-  max-width: 100%;
-}
+.parent {
+  background-color: #23424A;
+  padding: 50px;
 
-.header {
-  background-color: var(--bg-nav-color);
-  text-align: center;
-  position: absolute;
-  width: 100%;
-  z-index: 1;
-  padding: 1em 0 0;
-  top: 0;
-}
-
-.container {
-  width: 87%;
-  max-width: 1200px;
+  /* width: 900px */
   margin: 0 auto;
-  position: relative;
+  width: 80%;
 }
 
-.nav-toggle {
-  cursor: pointer;
-  border: 0;
-  width: 3rem;
-  height: 2rem;
-  padding: 0em;
-  background: var(--bg-nav-color);
-  transition: opacity 250ms ease;
-  position: absolute;
-  left: 0;
-}
-
-.hamburger {
+.child {
+  background-color: #38CFD9;
+  /* normally I wouldn't include
+     a height it's just to get us started. 
+  */
   width: 50%;
-  position: relative;
-}
-
-.hamburger,
-.hamburger::before,
-.hamburger::after {
-  display: block;
-  height: 3px;
-  background: #fff;
-}
-
-.hamburger::before,
-.hamburger::after {
-  content: "";
-  width: 100%;
-}
-
-.hamburger::before {
-  transform: translateY(-6px);
-}
-
-.hamburger::after {
-  transform: translateY(3px);
-}
-
-.nav {
-  margin: 0;
-  padding: 0;
-  height: 0;
-  visibility: hidden;
-  font-size: 1.125rem;
-  width: 100%;
-}
-
-.primary-nav {
-  margin-bottom: 2em;
-}
-
-.secondary-nav {
-  margin: 1em 0;
-}
-
-.nav__list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.nav__link {
-  color: #FFF;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-
-.nav__item {
-  margin-top: .75em;
-}
-
-.nav__link-button {
-  background-color: var(--accent-color);
-  padding: .25em .75em;
-  border-radius: 100px;
-  margin-bottom: .74em;
-}
-
-.nav__link:hover,
-.nav__link:focus {
-  opacity: .5;
-}
-
-.nav-visibility { 
-  visibility: visible;
-  height: auto;
-}
-
-.hero {
-  background: var(--bg-main-color);
-  /* padding-top: 3.9em; */
-  color: var(--secondary-accent-color);
-}
-
-.section__title {
-  font-size: 3rem;
-  line-height: 1.1;
-  margin-top: 0;
-  margin-bottom: .6em;
-}
-
-.section__title-alt-color {
-  color: var(--accent-color);
-}
-
-.hero__content {
-  padding-top: 7em;
-  padding-bottom: 6em;
-}
-
-.hero-text {
-  font-family: var(--secondary-font-family);
-  color: var(--secondary-accent-color);
-  opacity: 70%;
-  font-size: 1.5rem;
-  margin-bottom: .8em;
-  line-height: 1.4em;
-}
-
-.hero__button {
-  background-color: var(--accent-color);
-  color: var(--secondary-accent-color);
-  padding: .25em 1.5em;
-  border-radius: 100px;
-  border: none;
-  text-transform: uppercase;
-  font-size: 1.5rem;
-  font-family: var(--main-font-family);
-  font-weight: 700;
-}
-
-.main {
-  background: var(--bg-secondary-color);
-  text-align: center;
-  padding: 2em 0 1em;
-}
-
-.main__title {
-  margin: 0;
-  padding-bottom:.4em;
-  font-size: 1.875rem;
-  color: var(--accent-color);
-}
-
-.main__text {
-  font-family: var(--secondary-font-family);
-  margin: 0;
-  color: var(--bg-section-color);
-  padding-bottom: 1.2em;
-}
-
-.secondary__title {
-  font-size: 2.25rem;
-  color: var(--accent-color)
-}
-
-.secondary__text {
-  font-family: var(--secondary-font-family);
-  color: var(--bg-section-color);
-  font-size: 1.3125rem;
-  line-height: 1.5;
-}
-
-.aside {
-  margin-top: 2em;
-  margin-bottom: 2em;
-}
-
-.article {
-  background: var(--bg-main-color);
-  text-align: center;
-  color: var(--secondary-accent-color);
-  margin-bottom: 1.8em;
-}
-
-.article__container {
-  width: 87%;
-  padding: 1.5em 0 2em;
-  margin: auto;
-}
-
-.article__title {
-  margin: 0;
-  padding-bottom:.4em;
-  font-size: 1.875rem;
-}
-
-.article__text {
-  font-family: var(--secondary-font-family);
-  margin: 0;
-  line-height: 1.6;
-  opacity: 70%;
-}
-
-.footer {
-  background: var(--bg-main-color);
-  
-}
-
-.footer-nav {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 1em;
-  padding-bottom: 2em;
-}
-
-.footer__title {
-  color: var(--secondary-accent-color);
-  font-size: 2rem;
-  padding-top: 2em;
-  padding-bottom: .8em;
-  text-align: center;
-}
-
-.footer-nav__title {
-  font-size: 1.3125rem;
-  color: var(--accent-color);
-  padding: 0;
-}
-
-.footer-nav__list {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.footer-nav__link {
-  text-decoration: none;
-  color: #6F737F;
-  font-family: var(--secondary-font-family);
-  font-size: 1rem;
-}
-
-@media (min-width: 700px) {
-  .header {
-    text-align: center;
-    position: relative;
-    width: 100%;
-    /* z-index: 1; */
-    padding: 1em 0;
-    /* top: 0; */
-  }
-
-  .nav__row {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  .nav-toggle {
-    display: none;
-  }
-
-  .nav {
-    visibility: visible;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    height: auto;
-    position: relative;
-  }
-
-  .nav__list {
-    display: flex;
-    margin: 0;
-  }
-
-  .secondary-nav {
-    margin: 0;
-  }
-
-  .primary-nav {
-    margin: 0 auto;
-  }
-
-  .nav__item {
-    margin: 0;
-  }
-
-  .nav__item {
-    margin-left: 1.4em;
-  }
-
-  .hero__content {
-    padding-top: 4em;
-  }
-
-  .main-row {
-    display: flex;
-  }
-
-  .main__title {
-    font-size: 1.5rem;
-  }
-  
-  .main__text {
-    font-size: 1rem;
-  }
-
-  .col + .col {
-    margin-left: .5em;
-  }
-
-  .section__title {
-    font-size: 4.625rem;
-  }
-
-  .aside {
-    display: flex;
-  }
-
-  .article__title {
-    font-size: 1.5rem;
-  }
-  
-  .article__text {
-    font-size: 1rem;
-  }
-
-  .article + .article {
-    margin-left: .5em;
-  }
-
-  .footer-nav__title {
-    margin: 0;
-  }
-
-  .footer__title {
-    font-size: 2.5rem;
-  }
-
-  .footer-text {
-    width: 40%;
-  }
-
-  .footer-nav {
-    display: flex;
-    margin: 0 0 0 2em;
-    justify-content: space-between;
-    width: 60%;
-    flex-wrap: nowrap;
-  }
-
-  .footer__row {
-    display: flex;
-  }
-}
-
-@media (min-width: 1000px) {
-  .secondary {
-    justify-content: space-between;
-  }
-
-  .article {
-    margin-left: 0;
-    margin-bottom: .7em;
-  }
-
-  .article + .article {
-    margin-top: 0;
-    margin-left: 0;
-  }
-  
-  .section__title {
-    width: 50%;
-    margin-bottom: 0;
-  }
-
-  .hero__right {
-    text-align: left;
-    position: relative;
-    width: 50%;
-  }
-
-  .hero__right__content {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    padding-left: 1em;
-  }
-
-  .secondary__content {
-    width: 66%;
-  }
-
-  .aside {
-    width: 30%;
-    display: block;
-  }
-
-  .row {
-    display: flex;
-    margin: 0 auto;
-  }
+  height: 250px;
 }
