--- a/challenge02/style.css
+++ b/challenge02/style.css
@@ -24,14 +24,21 @@ body {
 }
 
 .container {
-  width: 80%;
-  max-width: 750px;
-  margin: 0 auto;
   background: #23424a;
   color: white;
   padding: 50px 0;
 }
 
+.article {
+  width: 80%;
+  margin: 0 auto;
+  max-width: 750px;
+}
+
 .intro-content {
   width: 50%;
+}
+
+.content {
+  margin: 0 auto;
 }
