--- a/challenge02/style.css
+++ b/challenge02/style.css
@@ -24,21 +24,17 @@ body {
 }
 
 .container {
-  background: #23424a;
-  color: white;
-  padding: 50px 0;
-}
-
-.article {
   width: 80%;
-  margin: 0 auto;
   max-width: 750px;
+  margin: 0 auto;
 }
 
 .intro-content {
   width: 50%;
 }
 
-.content {
-  margin: 0 auto;
+.intro {
+  background: #23424A;
+  color: white;
+  padding: 50px 0;
 }
