--- a/challenge02/style.css
+++ b/challenge02/style.css
@@ -1,18 +1,9 @@
-/* INSTRUCTIONS
- *
- * 1) Keep the text inside .intro-content
- *    in the same place, but have the background
- *    extend from one side of the viewport
- *    to the other, no matter how wide or narrow
- *    the browser is.
- *
- * 2) Limit the maximum width of the text in the
- *    bottom area.
- *
- * You may modify the HTML if needed
- * (you probably should for this challenge)
- *
- */
+:root {
+  --main-font: 'Roboto', sans-serif;
+  --main-color: #23424A;
+  --secondary-color: #F5F5F5;
+  --button-secondary-color: #38CFD9;
+}
 
 * {
   box-sizing: border-box;
@@ -23,18 +14,39 @@ body {
   font-family: sans-serif;
 }
 
+.intro {
+  background: var(--main-color);
+  color: var(--secondary-color);
+  font-family: var(--main-font);
+}
+
 .container {
   width: 80%;
-  max-width: 750px;
+  max-width: 1100px;
   margin: 0 auto;
 }
 
-.intro-content {
-  width: 50%;
+.content {
+  width: 70%;
+  padding: 4em 0;
 }
 
-.intro {
-  background: #23424A;
-  color: white;
-  padding: 50px 0;
+.content__title {
+  font-size: 3em;
+}
+
+.content__p {
+  font-size: 1.1em;
+}
+
+.main_button {
+  font-size: 1.1em;
+  font-weight: 700;
+  text-transform: uppercase;
+  background: var(--button-secondary-color);
+  color: var(--main-color);
+  border: none;
+  border-radius: 50px;
+  padding: 1em 2em;
+  margin: 2em 0 3em;
 }
