--- a/02-3 - challenge start/style.css
+++ b/02-3 - challenge start/style.css
@@ -33,6 +33,10 @@ h1 {
     font-size: 3rem;
 }
 
+img {
+    max-width: 100%;
+}
+
 .container {
     width: 80%;
     max-width: 1100px;
@@ -58,12 +62,25 @@ h1 {
     color: #FFF;
 }
 
+.hero__container {
+    justify-content: space-between;
+}
+
 .hero__text {
     width: 60%;
 }
 
+.hero__title {
+    margin: 0;
+}
+
 .hero p {
     margin-bottom: 3em;
+    line-height: 1.6em;
+}
+
+.hero__img {
+    width: 35%;
 }
 
 .btn {
@@ -80,4 +97,39 @@ h1 {
 .btn:hover,
 .btn:focus {
     opacity: .75; 
+}
+
+.section {
+    justify-content: space-between;
+    font-size: 1rem;
+    margin-top: 3em; 
+}
+
+.section p {
+    line-height: 1.6em;
+}
+
+.section__article {
+    width: 60%;
+}
+
+.section__title {
+    font-size: 2.1rem;
+    color: #136C72;
+}
+
+.sidebar {
+    width: 35%;
+    background-color: #136C72;
+    color: #FFF;
+    text-align: center;
+    padding: .5em 2em;
+}
+
+.sidebar__title {
+    font-size: 2.1rem;
+}
+
+.sidebar__p {
+    padding-bottom: 2em;
 }
