--- a/02-3 - challenge start/style.css
+++ b/02-3 - challenge start/style.css
@@ -37,6 +37,10 @@ img {
     max-width: 100%;
 }
 
+.section-title {
+    color: #87629A;
+}
+
 .container {
     width: 80%;
     max-width: 1100px;
@@ -46,6 +50,7 @@ img {
 .row {
     /* display: flex => flex container */
     display: flex;
+    justify-content: space-between;
 
     /* can't use yet */
     /* gap: 100px; */
@@ -54,33 +59,6 @@ img {
 .col {
     /* these are now flex items */
     width: 100%;
-}
-
-.hero {
-    padding: 100px 0;
-    background-color: #23424A;
-    color: #FFF;
-}
-
-.hero__container {
-    justify-content: space-between;
-}
-
-.hero__text {
-    width: 60%;
-}
-
-.hero__title {
-    margin: 0;
-}
-
-.hero p {
-    margin-bottom: 3em;
-    line-height: 1.6em;
-}
-
-.hero__img {
-    width: 35%;
 }
 
 .btn {
@@ -99,37 +77,56 @@ img {
     opacity: .75; 
 }
 
-.section {
-    justify-content: space-between;
-    font-size: 1rem;
-    margin-top: 3em; 
+.hero {
+    padding: 100px 0;
+    background-color: #23424A;
+    color: #FFF;
 }
 
-.section p {
+.hero__container {
+    justify-content: space-between;
+}
+
+.hero__text,
+.sidebar {
+    width: 62%;
+}
+
+.hero__title {
+    margin: 0;
+}
+
+.hero p {
+    margin-bottom: 3em;
     line-height: 1.6em;
 }
 
-.section__article {
-    width: 60%;
+.hero__img, .sidebar {
+    width: 32%;
+    align-self: flex-start;
 }
 
-.section__title {
-    font-size: 2.1rem;
-    color: #136C72;
+
+.main {
+    margin-top: 3em;
+}
+
+.primary-content {
+    width: 62%;
 }
 
 .sidebar {
-    width: 35%;
-    background-color: #136C72;
-    color: #FFF;
+    width: 32%;
     text-align: center;
-    padding: .5em 2em;
+    color: #FFF;
+    background-color: #136c72;
+    padding: 1em;
 }
 
-.sidebar__title {
-    font-size: 2.1rem;
-}
-
-.sidebar__p {
-    padding-bottom: 2em;
+.section {
+    width: 32%;
+    padding: 1em;
+    justify-content: space-between;
+    font-size: 1rem;
+    margin-top: 3em; 
 }
