--- a/nav-challenge/style.css
+++ b/nav-challenge/style.css
@@ -70,19 +70,19 @@ h1 {
 
 header {
     background: #136c72;
-    padding: .5em 0;
-}
-
-.nav {
-    padding: .6em;
+    padding: 1em 0;
 }
 
 .nav__list {
     margin: 0;
     padding: 0;
     list-style: none;
+    
     display: flex;
-    gap: 1em;
+}
+
+.nav__item {
+    margin-right: 1em;
 }
 
 .nav__link {
