--- a/nav-challenge/style.css
+++ b/nav-challenge/style.css
@@ -102,6 +102,10 @@ header {
   text-transform: uppercase;
 }
 
+.nav__list--primary {
+    margin: 0 auto;
+}
+
 .nav__item + .nav__item {
     margin-left: 1em;
 }
