added media query to challenges

--- a/02-3 - challenge start/style.css
+++ b/02-3 - challenge start/style.css
@@ -130,3 +130,20 @@ img {
     font-size: 1rem;
     margin-top: 3em; 
 }
+
+@media (max-width: 600px) {
+    .row {
+        display: block;
+    }
+
+    .hero__text,
+    .hero__img,
+    .primary-content,
+    .sidebar {
+        width: 100%;
+    }
+
+    .hero__img {
+        margin-top: 2em;
+    }
+}
