--- a/flexbox-challenge-4/style.css
+++ b/flexbox-challenge-4/style.css
@@ -1,4 +1,8 @@
-* {
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+body {
   --normal-font: 'Roboto', sans-serif;
   --bold-font: 'Playfair Display', serif;
   --hero-color: #F3EED9;
@@ -6,9 +10,88 @@
   --article-main-color: #824936;
 
   margin: 0;
-  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.3125rem;
+  line-height: 1.6;
+  color: #222C2A;
 }
 
 img {
   max-width: 100%;
+}
+
+h1, h2 {
+  font-family: 'Playfair Display', serif;
+  font-weight: 900;
+  margin-top: 0;
+  line-height: 1.1;
+}
+
+section {
+  padding: 4em 0;
+}
+
+.container {
+  width: 85%;
+  margin: 0 auto;
+}
+
+.section-title {
+  font-size: 2.25rem;
+  color: #F3EED9;
+}
+
+.section-title--dark {
+  color: #824936;
+}
+
+.intro {
+  background: #F3EED9;
+  padding: 200px 0;
+  text-align: center;
+  color: #824936;
+  min-height: 660px;
+
+  display: flex;
+  align-items: center;
+}
+
+.intro__text {
+  text-transform: uppercase;
+  letter-spacing: 10px;
+  font-size: 1.125rem;
+  color: #222C2A;
+  margin: 0 0 .25em;
+}
+
+.intro__title {
+  font-size: 3rem;
+}
+
+.section-three {
+  background-color: #222C2A;
+  color: #fff;
+}
+
+.section-four {
+  background-color: #824936;
+  color: #fff ;
+}
+
+@media (min-width: 800px) {
+  .row {
+    display: flex;
+  }
+
+  .col {
+    width: 100%;
+  }
+
+  .col + .col {
+    margin-left: 5em;
+  }
+
+  .intro__title {
+    font-size: 3.75rem;
+  }
 }
