--- a/final-challenge/style.css
+++ b/final-challenge/style.css
@@ -13,6 +13,7 @@ body {
 
 h1, h2, h3 {
   font-family: 'Oswald', sans-serif;
+  margin: 0;
 }
 
 img {
@@ -30,7 +31,7 @@ img {
 
 .header {
   background-color: var(--main-color-dark);
-  padding: 0 0 .5em;
+  padding: 0 0 .6em;
 
   position: absolute;
   top: 0;
@@ -38,7 +39,9 @@ img {
 }
 
 .nav {
-  padding: 1em .5em;
+  font-family: 'Oswald', sans-serif;
+  padding: .5em;
+  font-size: 1.125rem;
   text-transform: uppercase;
   text-align: center;
   visibility: hidden;
@@ -106,7 +109,7 @@ img {
 }
 
 .nav--height {
-  min-height: 300px;
+  min-height: 320px;
 }
 
 .logo {
@@ -148,6 +151,49 @@ img {
 
 /* ******** End of Nav ******** */
 
+/* ******** Start of Hero ******** */
+
 .hero {
-  margin-top: 4em;
+  padding: 5em 0 3em;
+  background-color: var(--secondary-color);
 }
+
+.hero__title {
+  font-size: 2.3rem;
+  color: var(--color-light);
+}
+
+.title__secondary--color {
+  color: var(--main-color-light);
+}
+
+.hero__secondary-text {
+  color: var(--nav-text-color);
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.2rem;
+
+  padding-bottom: .5em;
+}
+
+.action__button {
+  color: var(--color-light);
+  background-color: var(--main-color-light);
+  font-family: 'Oswald', sans-serif;
+  font-size: 1.2rem;
+
+  border-radius: 50px;
+  padding: .3em 1.5em;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+/* ******** End of Hero ******** */
+
+/* ******** Start of Section primary ******** */
+.section__primary {
+  background-color: var(--color-text);
+}
+
+/* ******** End of Section primary ******** */
+
+
+
