--- a/final-challenge/style.css
+++ b/final-challenge/style.css
@@ -213,8 +213,53 @@ img {
 
 /* ******** End of Section primary ******** */
 
+/* ******** start of Section secondary ******** */
+
 .section__secondary {
   background-color: var(--color-light);
+  
+  padding: 3em 0;
 }
 
+.section__secondary--title {
+  font-size: 2.25rem;
+  color: var(--main-color-light);
+}
+
+.section__secondary--text {
+  font-size: 1.3125rem;
+  color: var(--color-text);
+  margin: .8em 0 0;
+}
+
+.section__secondary--img {
+  padding: 1em 0;
+}
+
+.section__secondary--secondary__section {
+  text-align: center;
+}
+
+.section__secondary--secondary__section.col {
+  text-align: center;
+  padding-top: 0;
+}
+
+.article {
+  padding: 1em;
+  margin-top: 2em;
+  background-color: var(--main-color-dark);
+
+}
+
+.secondary__section--secondary__title {
+  color: var(--color-light);
+  font-size: 1.875rem;
+}
+
+.secondary__section--secondary__text {
+  color: var(--color-text);
+  font-size: 1.125rem;
+}
+/* ******** End of Section secondary ******** */
 
