completed footer and mobile to 700px layout complete

--- a/final-challenge/style.css
+++ b/final-challenge/style.css
@@ -263,3 +263,42 @@ img {
 }
 /* ******** End of Section secondary ******** */
 
+/* ******** Start of Footer ******** */
+.footer--nav {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.footer {
+  background-color: var(--secondary-color);
+  padding: 3em 0;
+}
+
+.footer--about, .footer__primary--nav, .footer__two--nav, .footer__three--nav {
+  list-style-type: none;
+  padding: 0;
+}
+
+.footer__title {
+  color: var(--color-light);
+  font-size: 1.5rem;
+  padding: 1em 0;
+}
+
+.footer__subtitle {
+  color: var(--main-color-light);
+  font-size: 1.3125rem;
+  font-family: 'Oswald', sans-serif;
+}
+
+.footer__subtext, .footer__item {
+  color: var(--color-text);
+  font-size: 1rem;
+}
+
+.footer__item {
+  padding-top: 1em;
+}
+
+/* ******** End of Footer ******** */
