--- a/final-challenge/style.css
+++ b/final-challenge/style.css
@@ -233,7 +233,7 @@ img {
 }
 
 .section__secondary--img {
-  padding: 1em 0;
+  padding: 1.8em 0 1em;
 }
 
 .section__secondary--secondary__section {
@@ -283,7 +283,7 @@ img {
 .footer__title {
   color: var(--color-light);
   font-size: 1.5rem;
-  padding: 1em 0;
+  padding: 0 0 1em;
 }
 
 .footer__subtitle {
