--- a/final-challenge/style.css
+++ b/final-challenge/style.css
@@ -285,6 +285,7 @@ img {
   color: var(--color-light);
   font-size: 1.5rem;
   padding: 0 0 1em;
+  text-align: center;
 }
 
 .footer__subtitle {
@@ -400,5 +401,26 @@ img {
 
   .section__secondary--secondary__section {
     width: 35%;
+  }
+
+  .footer--nav {
+    align-items: flex-start;
+  }
+
+  .footer__title {
+    font-size: 3rem;
+  }
+
+  .footer--about {
+    width: 35%;
+  }
+
+  .col + .col {
+    padding: 0;
+  }
+
+  .footer__subtext {
+    padding-top: 1em;
+    margin: 0;
   }
 }
